need to work with parametr rate doesn't read