@@ -1,19 +1,24 @@
 package service;
 
+import dao.CurrencyDao;
 import dao.ExchangeRateDao;
+import dto.CurrencyPair;
 import dto.ExchangeRateDto;
 import dto.ExchangeRateRequestDto;
 import exception.NotFoundException;
 import mapper.ExchangeRateMapper;
 import model.ExchangeRate;
+import validation.ExchangeRateFormatter;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class ExchangeRateService {
 
     private final ExchangeRateDao dao = ExchangeRateDao.getInstance();
+    private final CurrencyDao currencyDao = CurrencyDao.getInstance();
     private final ExchangeRateMapper mapper = ExchangeRateMapper.INSTANCE;
 
     public List<ExchangeRateDto> getAllExchangeRates() {
@@ -22,18 +27,11 @@ public class ExchangeRateService {
                 .collect(Collectors.toList());
     }
 
-//    public ExchangeRateDto getByCurrencyPairByCode(String baseCode, String targetCode) {
-//        return dao.getByPair(baseCode, targetCode)
-//                .map(mapper::toDto)
-//                .orElseThrow(() -> new NotFoundException(
-//                        String.format("Курс обмена для пары %s -> %s не найден", baseCode, targetCode)));
-//    }
-    public ExchangeRateDto getByCurrencyPairByCode(String inputCodes) {
-
-        return dao.getByPair(baseCode, targetCode)
+    public ExchangeRateDto fingExchangeRateByCode(String inputCodes) {
+        CurrencyPair codePair = ExchangeRateFormatter.parseValidCodePair(inputCodes);
+        return dao.getByPair(codePair.getBaseCurrency(), codePair.getTargetCurrency())
                 .map(mapper::toDto)
-                .orElseThrow(() -> new NotFoundException(
-                        String.format("Курс обмена для пары %s -> %s не найден", baseCode, targetCode)));
+                .orElseThrow(() -> new NotFoundException(String.format("Обменный курс для пары %s%s не найден".formatted( codePair.getBaseCurrency(), codePair.getTargetCurrency()))));
     }
 
     public ExchangeRateDto createExchangeRate(ExchangeRateRequestDto requestDto) {
@@ -45,7 +43,12 @@ public class ExchangeRateService {
         return mapper.toDto(savedRate);
     }
 
-    public boolean updateExchangeRate(String baseCode, String targetCode, BigDecimal newRate) {
-        return dao.update(baseCode, targetCode, newRate);
+    public ExchangeRateDto updateExchangeRate(String inputCodes, BigDecimal newRate) {
+        CurrencyPair codePair = ExchangeRateFormatter.parseValidCodePair(inputCodes);
+        ExchangeRate exchangeRate = dao.update(codePair.getBaseCurrency(), codePair.getTargetCurrency(), newRate);
+        return mapper.toDto(exchangeRate);
+
     }
+
+
 }
